[package]
name = "baby_shark"
version = "0.2.7"
edition = "2021"
description="Geometry processing library"
license="MIT"
homepage = "https://github.com/dima634/baby_shark"
repository = "https://github.com/dima634/baby_shark"
keywords = ["mesh", "mesh-processing", "geometry", "3d", "algorithms"]
categories = ["mathematics", "graphics", "data-structures"]
exclude = [
    ".github/workflows/*",
    ".vscode/*",
    "docs/*",
    "assets/*",
    "TODO.md"
]

[profile.release-debug-info]
inherits = "release"
debug = true

[profile.dev-opt]
inherits = "dev"
opt-level=3

[dependencies]
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
rayon = "1.8.1"
simba = "0.8.1"
num-traits = "0.2.15"
bitflags = "2.4.0"
tabled = "0.14.0"
petgraph = "0.6.2"
svg = "0.13.1"

[dev-dependencies]
test-case = "3.0.0"
rand = "0.8.5"
