[package]
name = "baby_shark"
version = "0.3.12"
edition = "2021"
description="Geometry processing library"
license="MIT"
homepage = "https://github.com/dima634/baby_shark"
repository = "https://github.com/dima634/baby_shark"
keywords = ["mesh", "mesh-processing", "geometry", "3d", "algorithms"]
categories = ["graphics", "games", "data-structures"]
exclude = [
    ".github/workflows/*",
    ".vscode/*",
    "docs/*",
    "assets/*",
    "TODO.md"
]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release-debug-info]
inherits = "release"
debug = true

[profile.dev-opt]
inherits = "dev"
opt-level=3

[dependencies]
nalgebra = "0.34.0"
nalgebra-glm = "0.20.0"
faer = "0.22.4"
rayon = "1.8.1"
bitflags = "2.9.1"
num-traits = "0.2.19"

[target.'cfg(target_arch ="wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.100"

[dev-dependencies]
test-case = "3.0.0"
